hphp/test/slow/inout/bad-func.php.expectf
Fatal error: A name or __construct keyword is expected here. in %s/test/slow/inout/bad-func.php on line 3
